# amf

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.example.json  config.json  docker-compose.yml  go.mod  go.sum
.claude/: settings.local.json
cmd/amf/: main.go
config/: amfcfg.json
context/3gpp/: TS29518_Namf_Communication.yaml  TS29518_Namf_EventExposure.yaml  TS29518_Namf_Location.yaml  TS29518_Namf_MBSBroadcast.yaml  TS29518_Namf_MBSCommunication.yaml  TS29518_Namf_MT.yaml
internal/consumer/: ausf_client.go  nrf_client.go  smf_client.go  udm_client.go
internal/context/: amf_context.go  amf_context_test.go  ran_context.go  ue_context.go
internal/database/: backup.go  mongodb.go  subscription_repository.go  ue_repository.go
internal/logger/: logger.go
internal/metrics/: metrics.go
internal/nas/: handler.go  message.go  message_sm.go  security.go
internal/ngap/: handler.go  message.go  server.go
internal/sbi/: amf_status_subscription_handler.go  backup_handler.go  event_notifier.go  event_subscription_handler.go  location_handler.go  mbs_broadcast_handler.go  mbs_handler.go  models.go  mt_handler.go  n1n2_handler.go  n2_transfer_handler.go  non_ue_n2_subscription_handler.go  server.go  ue_context_handler.go  ue_parameter_update_handler.go
pkg/factory/: config.go
pkg/util/: conversion.go
src/: config.rs  main.rs
src/context/: mod.rs  ran_context.rs  ue_context.rs
src/db/: mod.rs
src/nas/: messages.rs  mod.rs  security.rs
src/nf_client/: mod.rs
src/ngap/: codec.rs  handlers.rs  messages.rs  mod.rs  server.rs
(+28 files in other folders)
