[package]
name = "amf-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1.9"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "3.1", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6.1"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
ctr = "0.9"
cipher = "0.4"
digest = "0.10"
asn1-rs = "0.6"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"

[[bin]]
name = "amf"
path = "src/main.rs"
